# mini-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  NOTES.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  examples.md  tools.md
examples/: basic_chat.py  streaming.py  with_tools.py
src/mini_agent/: __init__.py  agent.py  cli.py  config.py  memory.py  multi.py
src/mini_agent/llm/: base.py  gemini_client.py  openai_client.py
src/mini_agent/server/: app.py  schemas.py  ws.py
src/mini_agent/tools/: __init__.py  base.py  calculator.py  file_reader.py  search.py
tests/: test_memory.py
tests/tools/: test_calculator.py
