[project]
name = "mini-agent"
version = "0.1.0"
description = "tiny modular AI agent framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Minh Le", email = "ducminhldm@gmail.com" }]
dependencies = [
  "langchain>=0.1",
  "openai>=1.0",
  "google-generativeai>=0.3",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "typer>=0.9",
  "pydantic>=2.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
